# OpenCrashWOC

./: .gitignore  CMakeLists.txt  README.md
PS2_Version/: GHG_GSC_FUNCTIONS.txt
code/: elf_systypes.h  newstructs_TBADDED.h  nu.h  nu3dx.h  nucore.h  numath.h  nuraster.h  nusound.h  system.h  types.h
code/PS2/: GHG_GSC_FUNCTIONS.txt  mainps2.txt
code/gamecode/: bug.c  camera.c  cloudfx.c  creature.c  creature.h  credits.c  cut.c  cut.h  font3d.c  font3d.h  game.c  game.h  inst.c  inst.h  light.c  listman.c  loadsave.c  main.c  main.h  panel.c  text.c  visi.c
code/gamelib/: edbits.c  edbits.h  edfile.c  edfile.h  gcutscn.c  glutils.c  glutils.h  nubridge.c  nuwind.c
code/nu3dx/: nu3dxtypes.h  nuanim.c  nuanim.h  nucamera.c  nucamera.h  nucvtskin.c  nucvtskin.h  nuglass.c  nuglass.h  nugobj.c  nugobj.h  nuhaze.c  nuhaze.h  nuhgobj.c  nuhgobj.h  nulight.c  nulight.h  numtl.c  numtl.h  nurndr.c  nurndr.h  nuscene.c  nuscene.h  nutex.c  nutex.h  nutxanm.c  nutxanm.h  nuvport.c  nuvport.h  nuwater.h  ps2_GHG.txt  ps2_funGHG.txt
code/nucore/: nucoretypes.h  nuerror.c  nuerror.h  nufile.c  nufile.h  nufpar.c  nufpar.h  numem.c  numem.h
code/numath/: nu_asm.c  nu_asm.h  nufloat.c  nufloat.h  numathtypes.h  numtx.c  numtx.h  nuplane.c  nuplane.h  nuquat.c  nuquat.h  nurand.c  nurand.h  nutrig.c  nutrig.h  nuvec.c  nuvec.h  nuvec4.c  nuvec4.h
code/nuraster/: dxframe.c  dxframe.h  nurastertypes.h
code/nusound/: nusound.c  nusound.h  nusoundtypes.h
code/nuxbox/: crash_xbox.c  dummyfunc.c  nuxboxtypes.h
code/src/: elf_systypes.h  newstructs_TBADDED.h  nu.h  nu3dx.h  (+6 more)
(+202 files in other folders)
